                          Apache OpenJPA 2.0.0-beta2
                          --------------------------

Content
-------
   * Overview
   * License
   * Notices
   * Prerequisites
   * Documentation
   * Getting Involved
   * Included Changes
     * Sub-tasks
     * Bugs
     * Improvements
     * New Features
     * Test


Overview
--------
   The Apache OpenJPA community is proud to release a Beta 2 distribution of
   OpenJPA 2.0.0. This distribution is based on the final JSR 317 Java 
   Persistence API, Version 2.0 specification and passes the JPA 2.0 TCK,
   while remaining backwards compatiable with prior releases based on the
   Java Persistence API (JPA 1.0) part of Java Community Process JSR-220
   (Enterprise JavaBeans 3.0). Included in this release are many enhancements,
   fixes, and new functionality; giving developers access to all the new
   features of JPA 2.0, including:

   * Access Types - expanded to allow specification on a per-persistent type
     basis or on individual attributes.
   * Embeddables - expanded to include collections of embeddables, nested
     embeddables, and embeddables containing relationships to other entities.
   * Enhanced Map Collections - expanded to support ElementCollection and new
     annotations for MapKeyColumn, MapKeyClass and MapKeyJoinColumn
   * Derived Identities - enables the ID of an entity to be derived from
     another entity, which provides for parent-to-dependent relationships
   * Query API - methods to get typed query parameters and results, supported
     and in-effect hints and lock mode getter/setter
   * Locking - official support for Pessimistic locking (included in prior
     OpenJPA releases) along with LockModeType properties and hint
   * JPQL Updates -
      ** Embeddables support for path expressions to nested Embeddables and
         Embeddables with relationships
      ** Enhanced Map Collection support for ElementCollection and new query
         expressions for KEY, ENTRY, VALUE