@@ -1,7 +1,7 @@
 <html>
-<title>Release Notes for Apache OpenJPA 2.0.0-beta2</title>
+<title>Release Notes for Apache OpenJPA 2.0.0-SNAPSHOT</title>
 <body>
-<h1>Release Notes for Apache OpenJPA 2.0.0-beta2</h1>
+<h1>Release Notes for Apache OpenJPA 2.0.0-SNAPSHOT</h1>
 <p>
 <ul>
   <li><a href="#Overview">Overview</a></li>
@@ -238,6 +238,8 @@ in each release of OpenJPA.</P>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1485'>OPENJPA-1485</a>] -         isLoaded util method does not behave per spec for collection attributes and basic type
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1504'>OPENJPA-1504</a>] -         Validation junits should not rely on Hibernate Impl
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1506'>OPENJPA-1506</a>] -         ConfigurationImpl.equals fails using a OpenJPA derived provider
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1507'>OPENJPA-1507</a>] -         NPE with a non-JDBC store manager
 </li>
